# learn-opengl-f

./: CMakeLists.txt  LICENSE  README.md
include/Glad/glad/: glad.h
lib/Glad/: glad.c
src/: config.h.in  main.cpp  shader.cpp  shader.hpp  version.h.in
src/shaders/: shader_fragment.glsl  shader_vertex.glsl
